# agri-vision-edge

./: .gitignore  20_ssd_mobilenet-v2_fpnlite_conversion.ipynb  NOTICE  THIRD_PARTY_NOTICES.md  pyproject.toml
notebooks/: 01_phenobench_dataset_export.ipynb  10_ssd_mobilenet_v2_fpnlite_training.ipynb  11_ssd_mobilenet_v2_training.ipynb  phenobench-ssd-mobilenet-v2-fpnlite-training.ipynb
scripts/: compile_protos.sh  hack-kaggle-deps.sh  prepare_dataset.py
src/: dependencies.py  setup_dataset.py
src/agri_vision_edge/: __init__.py  third_party.py
src/agri_vision_edge/data/: __init__.py  label_map.py  phenobench_loader.py  preprocessing.py  rep_dataset.py  tfrecord.py
src/agri_vision_edge/evaluation/: __init__.py  checkpoint.py  curves.py  tensorboard.py
src/agri_vision_edge/experiment/: __init__.py  environment.py  git.py  kaggle.py  manifest.py
src/agri_vision_edge/tfod/: __init__.py  common.py  config.py  eval.py  export.py  inference.py  train.py
